--- a/templates/pretty.html
+++ b/templates/pretty.html
@@ -6,6 +6,7 @@
 <!--[if lt IE 8]>
   <link rel="stylesheet" href="/static/blueprint/ie.css" type="text/css" media="screen, projection">
 <![endif]-->
+<meta name="google-site-verification" content="zsjy7Jn2LLM0pe2WUHhtZUkzo9duVl7BFW2rvmkhhKo" />
 </head>
 <style>
 @font-face {
