--- a/templates/mix/group.html
+++ b/templates/mix/group.html
@@ -111,7 +111,7 @@ $(document).ready(function () {
 	stomp.connect('localhost', 61613);
 
 {% if user.is_authenticated %}
-	$("#everything").dropzone({ url: '/music/begin_slice/' });
+	$("#everything").dropzone({ url: './music/begin_slice/' });
 	$.fn.dropzone.fileUploadProgressUpdated = function (index, file, progress) {
 		if ((progress == 100) && (full_upload == true)) {
 			$('#uploading').html('Processing...')
@@ -128,20 +128,20 @@ $(document).ready(function () {
 		var file = $.fn.getLastFile();
 		if (xhr.status == 200) {
 			$.fn.clearLastFile();
-			$.fn.setURL('/music/begin_slice/');
+			$.fn.setURL('./music/begin_slice/');
 			$('#uploading').html('Drop an MP3 file anywhere!')
 			return;
 		}
 
-		if ($.fn.getURL() == '/music/begin_slice/') {
+		if ($.fn.getURL() == './music/begin_slice/') {
 			if (xhr.status == 402) {
-				$.fn.setURL('/music/middle_slice/');
+				$.fn.setURL('./music/middle_slice/');
 				var size = file.fileSize;
 				full_upload = false;
 				$.fn.startXHRSlice(file, xhr.upload.fileIndex + 1, Math.floor(size/2)-50, Math.floor(size/2)+50);
 				return;
 			} else if (xhr.status == 404) {
-				$.fn.setURL('/music/upload/');
+				$.fn.setURL('./music/upload/');
 				full_upload = true;
 				$.fn.startXHRAll(file, xhr.upload.fileIndex + 1);
 				return;
@@ -150,15 +150,15 @@ $(document).ready(function () {
 			}
 		}
 
-		if ($.fn.getURL() == '/music/middle_slice/') {
+		if ($.fn.getURL() == './music/middle_slice/') {
 			if (xhr.status == 402) {
-				$.fn.setURL('/music/end_slice/');
+				$.fn.setURL('./music/end_slice/');
 				var size = file.fileSize;
 				full_upload = false
 				$.fn.startXHRSlice(file, xhr.upload.fileIndex + 1, size-100, size);
 				return;
 			} else if (xhr.status == 404) {
-				$.fn.setURL('/music/upload/');
+				$.fn.setURL('./music/upload/');
 				$.fn.startXHRAll(file, xhr.upload.fileIndex + 1);
 				return;
 			}
