--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,5 +1,7 @@
 {% extends "pretty.html" %}
 
+{% block login %}{% endblock %}
+
 {% block content %}
 <style>
 ul.errorlist { margin:0px; padding: 0px; }
