--- a/templates/mix/group.html
+++ b/templates/mix/group.html
@@ -245,7 +245,7 @@ Logged in as {{ user }} <a href="/account/logout/">Logout</a>
 </span>
 {% endif %}
 </div>
-<div style="height:174px;border:1px solid;"><img id="cover_art" style="float:left"><div id="current" style="float:left">Nothing queued</div></div>
+<div style="height:174px;border:1px solid;"><img id="cover_art" width="174" height="174" style="float:left"><div id="current" style="float:left">Nothing queued</div></div>
 <div id="middle">
 <ul id="online" style="float:right; width: 50px; height:100%;">
 </ul>
