--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,6 +43,7 @@ a { color:white; }
   </ul>
 </li>
 {% endfor %}
+<li><a href="/create/"><h3 style="color:white;text-align:center;">Create new group</h3></a></li>
 </ul>
 <script>
 $(document).ready(function () {
