--- a/templates/index.html
+++ b/templates/index.html
@@ -14,4 +14,6 @@
 {{ form.errors.email }}
 </ul>
 {% endif %}
+<br>
+<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FMuxlist%2F129016473835940&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=dark&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
 {% endblock %}
