--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <br>
 <h2>coming soon</h2>
 <br>
-<form action="/" method="post"><label>email:</label><input name="email"> <input type="submit" value="I'm interested"></form>
+<form action="/request/" method="post"><label>email:</label><input name="email"> <input type="submit" value="I'm interested"></form>
 {% if form.errors %}
 <ul id="errors">
 {{ form.errors.email }}
